fix mapbox styles and test scroll on modal on ios

--- a/public/styles/components/_menu.scss
+++ b/public/styles/components/_menu.scss
@@ -4,7 +4,7 @@
   left: 50%;
   transform: translateX(-50%);
   z-index: 3;
-  padding: 4rem 0 1.5rem;
+  padding: 0 0 1.5rem;
 }
 
 #main-menu {
